[package]
name = "l8kit-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.75"

near-lake-framework = { git = "https://github.com/near/near-lake-framework-rs", branch = "feat/lake-helpers" }
# near-lake-framework = { path = "../near-lake-framework-rs/near-lake-framework" }
